Sforce8 Project Data/src/objects/Plan__c.object
<CustomObject>
    <fields>
        <fullName>AccountA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountA</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>プラン</relationshipLabel>
        <relationshipName>Planm8c9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountB</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>プラン (AccountB)</relationshipLabel>
        <relationshipName>Planm8cT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AccountC</label>
        <referenceTo>AccountMaster__c</referenceTo>
        <relationshipLabel>プラン (AccountC)</relationshipLabel>
        <relationshipName>Planm8cd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountTotal__c</fullName>
        <formula>Charge1__c  +  Charge2__c  +  Charge3__c  +  ChargeRC__c   +  mealcost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountTotal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge1__c</fullName>
        <formula>AccountA__r.Field5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge2__c</fullName>
        <formula>AccountB__r.Field5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge3__c</fullName>
        <formula>AccountC__r.Field5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargeRC__c</fullName>
        <label>ChargeRC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Checkin__c</fullName>
        <label>チェックイン</label>
        <picklist>
            <picklistValues>
                <fullName>15時30分〜19時00分</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15時30分〜19時30分</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15時30分〜20時00分</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15時30分〜20時30分</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15時30分〜21時00分</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15時30分〜21時30分</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15時30分〜22時00分</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15時30分〜22時30分</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15時30分〜23時00分</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15時30分〜23時30分</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15時30分〜24時00分</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Checkout__c</fullName>
        <label>チェックアウト</label>
        <picklist>
            <picklistValues>
                <fullName>9時00分</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10時00分</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11時00分</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DpRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>カテゴリ</label>
        <referenceTo>DP__c</referenceTo>
        <relationshipLabel>プラン</relationshipLabel>
        <relationshipName>PlanDpRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <label>部屋タイプの特徴</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GpRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>部門</label>
        <referenceTo>GP__c</referenceTo>
        <relationshipLabel>プラン</relationshipLabel>
        <relationshipName>PlanGpRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guestroomtype__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Guest Room Type</inlineHelpText>
        <label>部屋タイプ</label>
        <referenceTo>TypeOfRooms__c</referenceTo>
        <relationshipLabel>プラン</relationshipLabel>
        <relationshipName>PlanSLIo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Image1__c</fullName>
        <label>イメージ1</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image2__c</fullName>
        <label>イメージ2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Image3__c</fullName>
        <label>イメージ3</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IntroMeal__c</fullName>
        <label>お食事紹介</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>JmstRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>消費税</label>
        <referenceTo>JMST__c</referenceTo>
        <relationshipLabel>プラン</relationshipLabel>
        <relationshipName>PlanJmsRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lunch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lunch</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipLabel>プラン (Lunch)</relationshipLabel>
        <relationshipName>PlanApAl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meal__c</fullName>
        <label>お食事</label>
        <picklist>
            <picklistValues>
                <fullName>朝食あり</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>朝食なし</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>夕食あり</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>夕食なし</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>PackageCode__c</fullName>
        <label>パッケージコード</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanNo__c</fullName>
        <label>PlanNo</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanStartDateandtime__c</fullName>
        <label>プランオープン日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Plan_URL__c</fullName>
        <label>Plan URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Planclosedateandtime__c</fullName>
        <label>プランクローズ日時</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planintro__c</fullName>
        <label>プラン紹介</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>プラン金額</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PublicPlan__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>サイトへ公開するプランにはチェックを入れる</inlineHelpText>
        <label>PublicPlan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Roomname__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guest room name</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>プラン</relationshipLabel>
        <relationshipName>planTvYQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Roomtype__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Notice:Please Not USE!</inlineHelpText>
        <label>Guest room type</label>
        <referenceTo>Type__c</referenceTo>
        <relationshipLabel>プラン</relationshipLabel>
        <relationshipName>planxx0r</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seq__c</fullName>
        <label>Seq#</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ServiceN__c</fullName>
        <formula>Roomname__r.heyadashiryouryou__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ServiceNY$</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServiceRate__c</fullName>
        <label>サービス料(%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <formula>Roomname__r.heyadashiryou__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service$</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AGT</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>プラン</relationshipLabel>
        <relationshipName>planXE9c</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dinner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dinner</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipLabel>プラン</relationshipLabel>
        <relationshipName>planA8mD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mealcost__c</fullName>
        <formula>IF ( dinner__r.Currency__c  &gt; 0 &amp;&amp;  Lunch__r.Currency__c &gt; 0, morning__r.Currency__c  +  dinner__r.Currency__c, morning__r.Currency__c  +  dinner__r.Currency__c +  Lunch__r.Currency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost of meal/person</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>morning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Morning</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipLabel>プラン (朝食)</relationshipLabel>
        <relationshipName>planA8mN</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>プラン</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>Plan</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>